fixed footer taking up too much space

--- a/Components/Footer/index.css
+++ b/Components/Footer/index.css
@@ -2,14 +2,17 @@
     margin: 0;
     padding: 0;
 }
+footer{
+    width: 100vw;
+}
 .footerContainer{
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 3fr));
     text-align: center;
-    gap: 60px;
+    gap: 100px;
     padding: 40px;
     background-color: #F9FBFC;
-    width: 100vw;
+    width: 95%;
 }
 li{
     list-style: none;
@@ -22,7 +25,7 @@ li{
     gap: 80px;
 }
 .bottomFooter{
-    width: 100vw;
+    width: 95%;
     display: flex;
     justify-content: space-around;
     align-items: center;
